ajusted de estilos y login

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -32,8 +32,6 @@
     "click here to request another": "pulsa aquí para que te enviemos otro",
     "All rights reserved.":  "Todos los derechos reservados.",
     "CREATE ACCOUNT":  "CREAR CUENTA",  
-    "WELCOME":  "BIENVENIDO",
     "Log-in":  "Iniciar sesión",
-    
-    "TO MUNDOFACTURA":  "A MUNDOFACTURA"
+    "WELCOME TO MUNDOFACTURA":  "BIENVENIDO A MUNDOFACTURA"
 }
