--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -20,7 +20,8 @@
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "Si tienes problemas haciendo click en el botón \":actionText\", copia y pega el siguiente\nenlace en tu navegador: [:actionURL](:actionURL)",
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:displayableActionUrl](:actionURL)": "Si tienes problemas haciendo click en el botón \":actionText\", copia y pega el siguiente\nenlace en tu navegador: [:displayableActionUrl](:actionURL)",
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Si tienes problemas haciendo click en el botón \":actionText\", copia y pega el siguiente\nenlace en tu navegador:",
-    "Send Password Reset Link": "Enviar enlace para restablecer contraseña",
+    "Send": "Enviar",
+    "Back": "Regresar",
     "Logout": "Cerrar sesión",
     "Verify Email Address": "Confirmar correo electrónico",
     "Please click the button below to verify your email address.": "Por favor pulsa el siguiente botón para confirmar tu correo electrónico.",
@@ -31,7 +32,8 @@
     "If you did not receive the email": "Si no has recibido el email",
     "click here to request another": "pulsa aquí para que te enviemos otro",
     "All rights reserved.":  "Todos los derechos reservados.",
-    "CREATE ACCOUNT":  "CREAR CUENTA",  
+    "CREATE ACCOUNT":  "CREAR CUENTA", 
+    "Create account":  "Crear cuenta",  
     "Log-in":  "Iniciar sesión",
     "WELCOME TO MUNDOFACTURA":  "BIENVENIDO A MUNDOFACTURA"
 }
