Ajustes de traduccion en Dashboard

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -35,5 +35,11 @@
     "CREATE ACCOUNT":  "CREAR CUENTA", 
     "Create account":  "Crear cuenta",  
     "Log-in":  "Iniciar sesión",
-    "WELCOME TO MUNDOFACTURA":  "BIENVENIDO A MUNDOFACTURA"
+    "WELCOME TO MUNDOFACTURA":  "BIENVENIDO A MUNDOFACTURA",
+    "Dashboard":"Tablero de control",
+    "Home": "Inicio",
+    "Profile": "Perfil",
+    "Activities": "Actividades",
+    "Settings":"Configuraciones",
+    "Logged in": "Logueado hace"
 }
